2014-05-17  Uros Bizjak  <ubizjak@gmail.com>

	* doc/invoke.texi (free): Mention Alpha.  Also enabled at -Os.

2014-05-17  Richard Sandiford  <r.sandiford@uk.ibm.com>

	* wide-int.cc: Only include longlong.h if W_TYPE_SIZE==32 or
	__SIZEOF_INT128__ is defined.

2014-05-17  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/rs6000/rs6000.c (rs6000_real_tls_symbol_ref_p): New function.
	(rs6000_delegitimize_address): Use it.

2014-05-17  Richard Sandiford  <rdsandiford@googlemail.com>

	* emit-rtl.h (replace_equiv_address, replace_equiv_address_nv): Add an
	inplace argument.  Store the new address in the original MEM when true.
	* emit-rtl.c (change_address_1): Likewise.
	(adjust_address_1, adjust_automodify_address_1, offset_address):
	Update accordingly.
	* rtl.h (plus_constant): Add an inplace argument.
	* explow.c (plus_constant): Likewise.  Try to reuse the original PLUS
	when true.  Avoid generating (plus X (const_int 0)).
	* function.c (instantiate_virtual_regs_in_rtx): Adjust the PLUS
	in-place.  Pass true to plus_constant.
	(instantiate_virtual_regs_in_insn): Pass true to replace_equiv_address.

2014-05-16  Dehao Chen  <dehao@google.com>

	* tree-cfg.c (gimple_merge_blocks): Updates bb count with max count.

2014-05-16  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/54089
	* config/sh/predicates.md (negt_reg_shl31_operand): Match additional
	patterns.
	* config/sh/sh.md (*negt_msb): Merge SH2A and non-SH2A variants.

2014-05-16  Dehao Chen  <dehao@google.com>

	* ira-int.h (REG_FREQ_FROM_EDGE_FREQ): Use
	optimize_function_for_size_p.
	* regs.h (REG_FREQ_FROM_BB): Likewise.

2014-05-16  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/51244
	* config/sh/sh.c (sh_eval_treg_value): Handle t_reg_operand and
	negt_reg_operand cases.
	* config/sh/sh.md (*cset_zero): Likewise by using cbranch_treg_value
	predicate.
	* config/sh/predicates.md (cbranch_treg_value): Simplify.

2014-05-16  Oleg Endo  <olegendo@gcc.gnu.org>
